--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <br>Порфтолио</br><br>
-    </div><div align="center"><img src="file:///C:/Users/pc/Downloads/nologo.png" width="600" height="250" align="middle"> <h5>Gassword-Generation pAssword-это программа для генерации безопасных паролей<br> логотипа небыло и скрина тоже нет</h5>
+    </div><div align="center"><img src="nologo.png" width="600" height="250" align="middle"> <h5>Gassword-Generation pAssword-это программа для генерации безопасных паролей<br> логотипа небыло и скрина тоже нет</h5>
         <button onclick="document.location='https://drive.google.com/drive/folders/1mQS7apXNGd3iz-qr8QvX_ucs6JCh_gKn'">
             Скачать через Google Disk
     </button>
